# Robot-Navigation-with-DRL

./: README.md
SiT_Dataset/: README.md
SiT_Dataset/modified_map/: Cafe_Street.json  Cafeteria.json  Converter.py  Corridor.json  Courtyard.json  Crossroad&Outdoor_Alley.json  Hallway.json  Lobby.json  RemoveZ.py  Subway_Entrance.json  Three_way_Intersection.json
SiT_Dataset/modified_trajectory/: trajectory_processor.py
SiT_Dataset/modified_trajectory/Cafe_street/Cafe_street_1/trajectory/: obstacle1.txt  obstacle10.txt  obstacle1000.txt  obstacle10001.txt  obstacle10003.txt  obstacle10004.txt  obstacle10005.txt  obstacle10006.txt  obstacle10007.txt  obstacle10008.txt  obstacle10009.txt  obstacle10010.txt  obstacle10011.txt  obstacle10012.txt  obstacle10013.txt  obstacle10061.txt  obstacle10063.txt  obstacle10064.txt  obstacle11.txt  obstacle12.txt  obstacle12000.txt  obstacle13.txt  obstacle14.txt  obstacle15.txt  obstacle16.txt  obstacle17.txt  obstacle18.txt  obstacle19.txt  obstacle2.txt  obstacle20.txt  obstacle20001.txt  obstacle20002.txt  obstacle20003.txt  obstacle20004.txt  obstacle20005.txt  obstacle20006.txt  obstacle20007.txt  obstacle20008.txt  obstacle201.txt  obstacle21.txt  (+42 more)
SiT_Dataset/modified_trajectory/Cafe_street/Cafe_street_2/trajectory/: obstacle1.txt  obstacle10.txt  obstacle11.txt  obstacle12.txt  obstacle13.txt  obstacle14.txt  obstacle15.txt  obstacle16.txt  obstacle17.txt  obstacle18.txt  obstacle2.txt  obstacle20.txt  obstacle20001.txt  obstacle20002.txt  obstacle20003.txt  obstacle20004.txt  obstacle20005.txt  obstacle20007.txt  obstacle20008.txt  obstacle20009.txt  obstacle20010.txt  obstacle20015.txt  obstacle21.txt  obstacle22.txt  obstacle222.txt  obstacle23.txt  obstacle230.txt  obstacle24.txt  obstacle25.txt  obstacle26.txt  obstacle27.txt  obstacle3.txt  obstacle300.txt  obstacle324.txt  obstacle325.txt  obstacle333.txt  obstacle4.txt  obstacle444.txt  obstacle5.txt  obstacle555.txt  (+7 more)
SiT_Dataset/modified_trajectory/Cafeteria/Cafeteria_1/trajectory/: obstacle1.txt  obstacle10003.txt  obstacle10005.txt  obstacle10009.txt  obstacle10013.txt  obstacle10016.txt  obstacle10017.txt  obstacle10021.txt  obstacle10023.txt  obstacle10027.txt  obstacle10028.txt  obstacle10030.txt  obstacle10032.txt  obstacle10033.txt  obstacle10034.txt  (+18 more)
media/: README.md
src/turtlebot3_drl/: README.md
src/turtlebot3_drl/model/GMJang/: __ddpg_testing_comparison.txt  __ddpg_training_comparison.txt  __dqn_testing_comparison.txt  __dqn_training_comparison.txt  __td3_testing_comparison.txt  __td3_training_comparison.txt
src/turtlebot3_drl/turtlebot3_drl/common/: graph.py  settings.py  visual.py
src/turtlebot3_drl/turtlebot3_drl/drl_agent/: ddpg.py  dqn.py  td3.py
src/turtlebot3_drl/turtlebot3_drl/drl_environment/: drl_environment.py  reward.py
src/turtlebot3_drl/turtlebot3_drl/drl_gazebo/: drl_gazebo.py
src/turtlebot3_msgs/: README.md
src/turtlebot3_simulations/: README.md
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_drl_stage1.launch.py  turtlebot3_drl_stage2.launch.py  turtlebot3_drl_stage3.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_drl_world/obstacle_plugin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  obstacle1.cc  obstacle11.cc  obstacle12.cc  obstacle12_1.cc  obstacle2.cc  obstacle200.cc  obstacle201.cc  obstacle2_1.cc  obstacle2_2.cc  obstacle3.cc  obstacle3_1.cc  obstacle3_2.cc  obstacle4.cc  obstacle4_1.cc  obstacle5.cc  obstacle5_1.cc  obstacle5_2.cc  obstacle6.cc  obstacle6_1.cc  obstacle7.cc  obstacle7_1.cc  obstacle8.cc  obstacle8_1.cc  obstacle9.cc  plugin_maker.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_obstacles/All_Default_Files/obstacle_plugin/: CMakeLists.txt
turtlebot3_drl_world/: README.md
turtlebot3_drl_world/trajectory (Courtyard)/: obstacle12_1.txt  obstacle200.txt  obstacle3_1.txt  obstacle5.txt  obstacle6_1.txt  obstacle7_1.txt  obstacle8_1.txt
turtlebot3_drl_world/trajectory (Hallway)/: obstacle15.txt  obstacle21.txt  obstacle25.txt  obstacle26.txt  obstacle3.txt  obstacle8.txt
turtlebot3_drl_world/trajectory (Lobby)/: model_maker.py  obstacle_generator.py
(+2850 files in other folders)
